--- a/index.html
+++ b/index.html
@@ -216,11 +216,14 @@
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card">
+                            <div class="card"> <a href="img/pengadaan.jpeg" target="_blank">
                             <img
                                 src="img/fo material.jpeg"
                                 class="card-img-top"
                                 alt="Penjualan FO Material"
                             />
+                        </a>
+                            
                             <div class="card-body">
                                 <p class="card-text">
                                     PENJUALAN MATERIAL FIBER OPTIC
