--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card">
-                            <div class="card"> <a href="img/pengadaan.jpeg" target="_blank">
+                            <div class="card"> <a href="img/fo material.jpeg" target="_blank">
                             <img
                                 src="img/fo material.jpeg"
                                 class="card-img-top"
