--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+<!--             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
                     fill="rgb(253, 198, 116)"
                     fill-opacity="1"
@@ -244,7 +244,7 @@
                     style="--darkreader-inline-fill: #222426"
                     data-darkreader-inline-fill=""
                 ></path>
-            </svg>
+            </svg> -->
         </section>
         <!-- Akhir Projek -->
 
